--- a/config/_default/hugo.toml
+++ b/config/_default/hugo.toml
@@ -4,7 +4,8 @@
 
 theme = "blowfish" # UNCOMMENT THIS LINE
 baseURL = "https://foraeu.github.io"
-defaultContentLanguage = "en"
+defaultContentLanguage = "zh-cn"
+hasCJKLanguage = true
 
 # pluralizeListTitles = "true" # hugo function useful for non-english languages, find out more in  https://gohugo.io/getting-started/configuration/#pluralizelisttitles
 
