--- a/config/_default/languages.zh-cn.toml
+++ b/config/_default/languages.zh-cn.toml
@@ -1,12 +1,12 @@
 # disabled = false
-languageCode = "en"
-languageName = "English"
+languageCode = "zh-cn"
+languageName = "Simplified Chinese (China)"
 weight = 1
 title = "Foraeu Blog"
 
 [params]
-  displayName = "EN"
-  isoCode = "en"
+  displayName = "简体中文"
+  isoCode = "cn"
   rtl = false
   dateFormat = "2 January 2006"
   logo = "img/flat.svg"
