--- a/config/_default/languages.zh-cn.toml
+++ b/config/_default/languages.zh-cn.toml
@@ -22,7 +22,7 @@ title = "Foraeu Blog"
   headline = "We are trying to prove ourselves wrong"
 #   bio = "A little bit about you"
   links = [
-    {github = "https://github.com/username" },
+    {github = "https://github.com/foraeu" },
     {netease_cloud_music = "https://music.163.com/#/user/home?id=421202432" },
     {qqmail = "mailto:2807463354@qq.com" },
 #     { gitlab = "https://gitlab.com/username" },
