--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -49,7 +49,7 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
   showMoreLink = true
   showMoreLinkDest = "/posts/"
   cardView = true
-  cardViewScreenWidth = false
+  cardViewScreenWidth = true
   layoutBackgroundBlur = false # only used when layout equals background
 
 [article]
@@ -66,7 +66,7 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
   layoutBackgroundHeaderSpace = true # only used when heroStyle equals background
   showBreadcrumbs = true
   showDraftLabel = true
-  showEdit = true
+  showEdit = false
   editURL = "https://github.com/foraeu/foraeu.github.io/"
   editAppendPath = false
   seriesOpened = false
