--- a/config/_default/languages.zh-cn.toml
+++ b/config/_default/languages.zh-cn.toml
@@ -8,7 +8,7 @@ title = "Foraeu Blog"
   displayName = "简体中文"
   isoCode = "cn"
   rtl = false
-  dateFormat = "2 January 2006"
+  dateFormat = "2006年1月2日"
   logo = "img/flat.svg"
   # secondaryLogo = "img/pc1.svg"
   # description = "My awesome website"
@@ -19,12 +19,12 @@ title = "Foraeu Blog"
 #   email = "youremail@example.com"
   image = "img/author.jpg"
 #   imageQuality = 96
-  headline = "向开源者致敬"
+  headline = "开源让世界更精彩"
 #   bio = "A little bit about you"
   links = [
     {github = "https://github.com/foraeu" },
     {netease_cloud_music = "https://music.163.com/#/user/home?id=421202432" },
-    {qqmail = "mailto:2807463354@qq.com" },
+    {email = "mailto:2807463354@qq.com" },
 #     { gitlab = "https://gitlab.com/username" },
 #     { email = "mailto:hello@your_domain.com" },
 #     { link = "https://link-to-some-website.com/" },
