--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Deploy to GitHub Pages
       uses: peaceiris/actions-gh-pages@v3
       with:
-        personal_token: ${{ secrets.SSH_PRIVATE_KEY }}   # PUBLIC 请改为你设置的 Secret 名称
+        personal_token: ${{ secrets.BLOG }}   # PUBLIC 请改为你设置的 Secret 名称
         publish_dir: ./public
         external_repository: foraeu/foraeu.github.io    # 改为你自己的仓库
         publish_branch: main    # push 的仓库的分支
@@ -35,7 +35,7 @@ jobs:
     - name: Set up SSH
       uses: webfactory/ssh-agent@v0.5.3
       with:
-        ssh-private-key: ${{ secrets.BLOG }}
+        ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
 
     - name: Deploy to Nginx Server
       run: |
