--- a/config/_default/languages.zh-cn.toml
+++ b/config/_default/languages.zh-cn.toml
@@ -19,11 +19,11 @@ title = "Foraeu Blog"
 #   email = "youremail@example.com"
   image = "img/author.jpg"
 #   imageQuality = 96
-  headline = "开源让世界更精彩"
+  headline = "Open source makes the world more vibrant"
 #   bio = "A little bit about you"
   links = [
     {github = "https://github.com/foraeu" },
-    {netease_cloud_music = "https://music.163.com/#/user/home?id=421202432" },
+#    {netease_cloud_music = "https://music.163.com/#/user/home?id=421202432" },
     {email = "mailto:2807463354@qq.com" },
 #     { gitlab = "https://gitlab.com/username" },
 #     { email = "mailto:hello@your_domain.com" },
