--- a/config/_default/menus.zh-cn.toml
+++ b/config/_default/menus.zh-cn.toml
@@ -39,12 +39,12 @@
   weight = 20
   pre ="link"
 
-[[main]]
-  name = "github"
-  parent = "链接"
-  pre = "github"
-  weight = 20
-  url = "https://github.com/foraeu"
+#[[main]]
+#  name = "github"
+#  parent = "链接"
+#  pre = "github"
+#  weight = 20
+#  url = "https://github.com/foraeu"
 
 #[[main]]
 #  name = "Blog"
