--- a/config/_default/languages.zh-cn.toml
+++ b/config/_default/languages.zh-cn.toml
@@ -19,7 +19,7 @@ title = "Foraeu Blog"
 #   email = "youremail@example.com"
   image = "img/author.jpg"
 #   imageQuality = 96
-  headline = "Open source makes the world more vibrant"
+#  headline = "Open source makes the world more vibrant"
 #   bio = "A little bit about you"
   links = [
     {github = "https://github.com/foraeu" },
