--- a/config/_default/languages.zh-cn.toml
+++ b/config/_default/languages.zh-cn.toml
@@ -9,7 +9,7 @@ title = "Foraeu Blog"
   isoCode = "cn"
   rtl = false
   dateFormat = "2006年1月2日"
-  logo = "img/flat.svg"
+  logo = "img/logo.png"
   # secondaryLogo = "img/pc1.svg"
   # description = "My"
   # copyright = "Copy, _right?_ :thinking_face:"
@@ -19,7 +19,7 @@ title = "Foraeu Blog"
 #   email = "youremail@example.com"
   image = "img/author.jpg"
 #   imageQuality = 96
-#  headline = "Open source makes the world more vibrant"
+  headline = "非淡泊无以明志，非宁静无以致远"
 #   bio = "A little bit about you"
   links = [
     {github = "https://github.com/foraeu" },
