--- a/config/_default/params.toml
+++ b/config/_default/params.toml
@@ -162,3 +162,4 @@ forgejoDefaultServer = "https://v8.next.forgejo.org"
   # bing = ""
   # pinterest = ""
   # yandex = ""
+  baidu = "codeva-ashLcc4Hzj"
